--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aysdatabase",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AysDatabase is a simple JSON-based database module for Node.js. It allows you to store and manage data in JSON format within a file. This module is suitable for small-scale projects and prototypes where you need a lightweight database system.",
   "main": "index.js",
   "scripts": {
@@ -16,5 +16,14 @@
   "license": "Apache-2.0",
   "dependencies": {
     "fs": "^0.0.1-security"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ayste4/aysdatabase.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ayste4/aysdatabase/issues"
+  },
+  "homepage": "https://github.com/ayste4/aysdatabase#readme"
 }
